# delegation-bot

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml
delegation_bot/: __init__.py  __main__.py  action_request.py  adapter_fixtures.py  adapter_sdk.py  adapters.py  agent_gate.py  agent_packet.py  agent_passports.py  agent_registry_writer.py  agent_result.py  agent_run.py  app_dashboard.py  app_plan.py  app_state.py  approval_inbox.py  approval_preview.py  builtin_adapters.py  cli.py  dashboard.py  doctor.py  eval_feedback.py  evals.py  evidence_ingest.py  evidence_report.py  first_run.py  github_actions_apply.py  github_app_plan.py  github_auth.py  github_issue_apply.py  harness_manifest.py  harness_plan.py  ledger.py  local_app.py  local_workspace.py  mcp_policy_gate.py  mission_status.py  mission_timeline.py  model_suggest_fixtures.py  model_suggest_live.py  (+11 more)
docs/: adapter-candidate-matrix.md  adapter-compatibility.md  adapter-contracts.md  adapter-sdk.md  adoption-strategy.md  agent-enablement.md  agent-gate.md  agent-handoff.md  app-dashboard.md  approval-inbox.md  architecture.md  brand-transition.md  build-an-adapter.md  business-model.md  contributor-license-policy.md  control-loop.md  dashboard-data-model.md  dashboard-wireframe.md  decision-log.md  demo.md  doctor.md  domain-strategy.md  eval-to-issue-feedback.md  evidence-tools.md  github-actions-apply.md  github-app-installation.md  github-issue-apply.md  harnessfile-suggest.md  hybrid-trust-model.md  issue-labels.md  ledger-fixtures.md  ledger-viewer.md  license-strategy.md  live-execution-gate.md  local-app.md  local-classifier-policy.md  local-first.md  mcp-tool-risk.md  million-star-strategy.md  mission-timeline.md  (+15 more)
examples/: agent-passports.yaml  ai-harness-control-plane.yaml  feedback-recovery-harness.yaml
playbooks/: catalog.yaml  ci-repair.yaml  code-review.yaml  documentation-refresh.yaml  release-readiness.yaml  weekly-planning.yaml
schemas/: adapter-contract.v1.schema.json  agent-registry.v1.schema.json  eval-report.v1.schema.json  harness-suggestion-draft.v1.schema.json  harness.v1.schema.json  ledger.v1.schema.json  playbook-catalog.v1.schema.json  promotion-report.v1.schema.json
scripts/: __init__.py  adapters.py  backup_repo.py  build-windows-exe.ps1  delegation.py  delegation_bot.py  evals.py  generate_adapter_fixtures.py  harness_manifest.py  harness_plan.py  install-windows-exe.ps1  package_smoke.py  promotion.py  qa.py
tasks/: daily-standup.md  (+6 more)
(+61 files in other folders)
